# n5_to_ome_zarr

./: .gitignore  README.md  pyproject.toml
src/: n5_to_zarr.py  unit_names.json  zarr_attrs_template.json
tests/: test_n5_to_zarr.py
