[tool.poetry]
name = "n5-to-zarr"
version = "0.1.0"
description = ""
authors = ["Yurii Zubov <zubov452@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
dask = "^2023.8.0"
zarr = "^2.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
